[project]
name = "time-travel-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "black==23.11.0",
    "fastapi==0.104.1",
    "flake8==6.1.0",
    "httpx==0.25.2",
    "isort==5.12.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "python-dotenv==1.0.0",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]==0.24.0",
]
