[project]
name = "time-travel-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.12.1",
    "beautifulsoup4>=4.12.3",
    "black>=24.3.0",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.111.0",
    "flake8>=7.0.0",
    "httpx>=0.27.0",
    "isort>=5.13.2",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.31",
    "langchain-tavily>=0.2.11",
    "langchain-upstage>=0.7.3",
    "langgraph>=0.6.6",
    "passlib[bcrypt]==1.7.4",
    "pydantic>=2.11.0,<3",
    "pydantic-settings>=2.3.0,<3",
    "pyowm>=3.3.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.8",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "requests>=2.32.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy==2.0.23",
    "uvicorn[standard]>=0.30.0",
]
